--- a/handout/handout.tex
+++ b/handout/handout.tex
@@ -81,7 +81,7 @@
 %\maketitle
 \thispagestyle{empty}
 
-\section*{Lean syntax cheat sheet}
+\section*{Lean for the Functional Programmer -- BobKonf 2024 -- Cheat Sheet}
 
 \setlength\columnsep{5mm}
 \begin{multicols*}{2}
@@ -144,6 +144,7 @@ inductive Tree α where
 #check Tree.branch
 \end{lstlisting}
 
+\columnbreak
 \textbf{Theorems and proofs}
 
 Equality:
