--- a/handout/lstlean.tex
+++ b/handout/lstlean.tex
@@ -42,7 +42,7 @@ simp, simp_all, contradiction,
 constructor, injection,
 induction,
 % added by Joachim
-unfold, case,
+unfold, case, omega,
 },
 
 % modifiers, taken from lean-syntax.el
